[package]
name = "roll"
version = "1.0.0"
authors = ["Alex Vermillion <dev@ajvermillion.com>"]
edition = "2018"
description = "A command line utility used to simulate dice rolls."
license = "AGPL-3.0-or-later"
license-file = "LICENSE.md"

[dependencies]
num-bigint = { version = "0.3", features = ["rand"] }
rand = "0.7"
num-traits = "0.2"
